force-app/main/default/objects/ucinn_ascendv2__Session__c/ucinn_ascendv2__Session__c.object-meta.xml
<CustomObject>
    <description>Period of activity that is devoted to processing donations (gift/pledge/pledge payment). Grouping of transactions associated per gift processor.</description>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>