force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISUF Approval</fullName>
                <default>true</default>
                <label>ISUF Approval</label>
            </value>
            <value>
                <fullName>Recognition Approval</fullName>
            </value>
            <value>
                <fullName>ISUAA Approval</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Automatic Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>