force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>