force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Cash_Adjustment_Session_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>Cash_Adjustment_Session_Approval_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O4U000005AoBNUA0/view?fv0=&apos;&amp; Id &amp; &apos;&amp;fv1=&apos; &amp; Id, &quot;Cash Adjustment Batch Approval Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Adjustment Session Approval Report</label>
    <type>Text</type>
</CustomField>