force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Cash_Gift_Session_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>Cash_Gift_Session_Approval_Report__c</fullName>
    <description>This is a dynamic report used for Cash Gift batch approval</description>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009fH41UAE/view?fv0=&apos;&amp; Id, &quot;Cash Gift Batch Approval Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Gift Session Approval Report</label>
    <type>Text</type>
</CustomField>