force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Credit_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date_Formula__c</fullName>
    <formula>Credit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Date Formula</label>
    <type>Date</type>
</CustomField>