force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>ucinn_ascendv2__Disbursement__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>