force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Exclude_from_HSC_chatter_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_HSC_chatter_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to exclude this session from allowing the HSC rows to be pulled into asc_BATCH_HSCNotifications() that generates chatter notifications on constituents and funds.</description>
    <label>Exclude from HSC chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>