force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ISUF_Pledges_are_Sent_To_G_L__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Pledges_are_Sent_To_G_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pledges are Sent To G/L</label>
    <type>Checkbox</type>
</CustomField>