force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ISUF_Pledges_Sent_to_G_L_Date__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Pledges_Sent_to_G_L_Date__c</fullName>
    <description>The Datetime that all pledges in this Session were sent to GL</description>
    <inlineHelpText>The Datetime that all pledges in this Session were sent to GL</inlineHelpText>
    <label>Pledges Sent to G/L Date</label>
    <type>DateTime</type>
</CustomField>