force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Matching_Gift_Expectancy_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Expectancy_Approval_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009fJb0UAE/view?fv0=&apos;&amp; Id, &quot;Matching Gift Batch Approval&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Gift Expectancy Approval Report</label>
    <type>Text</type>
</CustomField>