force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Membership_Session_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>Membership_Session_Approval_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009fFsYUAU/view?fv0=&apos;&amp; Id, &quot;Membership Batch Approval Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Session Approval Report</label>
    <type>Text</type>
</CustomField>