force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Number_of_RT_Rows__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RT_Rows__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of RT Rows</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>