force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/PG_Adjustment_Session_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>PG_Adjustment_Session_Approval_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00ONu000000Ns7mMAC/view?fv0=&apos;&amp; Id &amp; &apos;&amp;fv1=&apos; &amp; Id, &quot;PG Adjustment Batch Approval Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PG Adjustment Session Approval Report</label>
    <type>Text</type>
</CustomField>