force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Planned_Giving_Session_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>Planned_Giving_Session_Approval_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009fFsiUAE/view?fv2=&apos;&amp; Id, &quot;Planned Gift Batch Approval Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Giving Session Approval Report</label>
    <type>Text</type>
</CustomField>