force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Pledge_Session_Approval_Report__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Session_Approval_Report__c</fullName>
    <description>This is a dynamic report to be used when sending Pledge Batches to Finance.</description>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009fFsjUAE/view?fv1=&apos;&amp; Id, &quot;Pledge Batch Approval Report&quot;)</formula>
    <label>Pledge Session Approval Report</label>
    <type>Text</type>
</CustomField>