force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Receipt_Range__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Range__c</fullName>
    <label>Receipt Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>