force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Send_Pledge_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_Pledge_Reminder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Pledge Reminder</label>
    <type>Checkbox</type>
</CustomField>