force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/Source_Total__c.field-meta.xml
<CustomField>
    <fullName>Source_Total__c</fullName>
    <label>Source Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>