force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Approval_Duration_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Approval_Duration_Formula__c</fullName>
    <formula>(ucinn_ascendv2__Session_Totals_Approved__c - ucinn_ascendv2__Session_Completed__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>