force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Audit_Type__c</fullName>
    <description>Audit type to close session in xGP.
None: can close regardless of expected amounts vs actual amounts
Strict: can only close when expected amounts = actual amounts</description>
    <inlineHelpText>Audit type to close session in xGP.
None: can close regardless of expected amounts vs actual amounts
Strict: can only close when expected amounts = actual amounts</inlineHelpText>
    <label>Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Strict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>