force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Auto_Renewing_Mem_Pymt_Amt_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Auto_Renewing_Mem_Pymt_Amt_Posted__c</fullName>
    <description>Auto Renewing Membership Payment Amount Posted</description>
    <inlineHelpText>Auto Renewing Membership Payment Amount Posted</inlineHelpText>
    <label>Auto Renewing Mem Payment Amount Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>