force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Auto_Renewing_Membership_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Auto_Renewing_Membership_Payment_Amount__c</fullName>
    <description>Expected Auto Renewing Membership Payment Amount transacted in the Session.</description>
    <inlineHelpText>Expected Auto Renewing Membership Payment Amount transacted in the Session.</inlineHelpText>
    <label>Auto Renewing Membership Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>