force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>