force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Close_Session_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Close_Session_Formula__c</fullName>
    <formula>IF(  ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c ,&apos;Not Available (Session Closed)&apos;,HYPERLINK(&quot;/&quot; &amp;  $Setup.ucinn_ascendv2__Namespace__c.ucinn_ascendv2__Namespace_Value__c  &amp;&quot;/DONATION_CloseSessionApp.app?closeCancel=true&amp;sessionId=&quot; + Id
,IMAGE(&quot;/resource/&quot; &amp;  $Setup.ucinn_ascendv2__Namespace__c.ucinn_ascendv2__Namespace_Prefix__c &amp; &quot;FinalizeButton&quot;, &quot;Close Session&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Session</label>
    <type>Text</type>
</CustomField>