force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>