force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Double_The_Donation_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Double_The_Donation_Account__c</fullName>
    <description>Picklist that lists Double the Donation credential groupings in External API Credentials for custom metadata type and custom settings.</description>
    <inlineHelpText>Double the Donation credentials to be applied to all payments in this session. If none is selected, default from custom metadata is selected.</inlineHelpText>
    <label>Double The Donation Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test 100</fullName>
            </value>
            <value>
                <fullName>Test Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>