force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Expedited_GPv2_Default_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_GPv2_Default_1__c</fullName>
    <description>xGPv2 default template based on transaction type</description>
    <inlineHelpText>xGPv2 default template based on transaction type</inlineHelpText>
    <label>Expedited GPv2 Default 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>