force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__External_Payment_Gateway_Settings__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_Payment_Gateway_Settings__c</fullName>
    <label>Extern Pmt Gateway Settings (DEPRECATED)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>