force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__External_Payment_Gateway_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_Payment_Gateway_Type__c</fullName>
    <label>External Payment Gateway Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__External_Payment_Gateway_Type</valueSetName>
    </valueSet>
</CustomField>