force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__External_Payment_Settings__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_Payment_Settings__c</fullName>
    <label>External Payment Settings</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ucinn_ascendv2__External_Payment_Gateway_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder Setting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>