force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Gift_Amount_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Amount_Posted__c</fullName>
    <description>Gift Amount Posted in this session.</description>
    <inlineHelpText>Gift Amount Posted in this session.</inlineHelpText>
    <label>Gift Amount Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>