force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Gift_Specialist_Comments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Specialist_Comments__c</fullName>
    <label>Gift Specialist Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>