force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Installment_Based_Membership_Amt_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Installment_Based_Membership_Amt_Posted__c</fullName>
    <label>Installment Based Membership Amt Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>