force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Installment_Mem_Payment_Amt_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Installment_Mem_Payment_Amt_Posted__c</fullName>
    <description>Installment Based Membership Payment Amount Posted in this session.</description>
    <inlineHelpText>Installment Based Membership Payment Amount Posted in this session.</inlineHelpText>
    <label>Installment Mem Payment Amt Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>