force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completed by Gift Specialist</label>
    <type>Checkbox</type>
</CustomField>