force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Is_Ready_for_G_L__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Ready_for_G_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ready for G / L</label>
    <type>Checkbox</type>
</CustomField>