force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Is_Sent_to_Laserfiche__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Sent_to_Laserfiche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sent to Laserfiche</label>
    <type>Checkbox</type>
</CustomField>