force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Is_Special_Condition_Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Special_Condition_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this session is created from a review transaction that met the filter criteria, if enabled in the custom metadata.</description>
    <inlineHelpText>Denotes whether or not this session is created from a review transaction that met the filter criteria, if enabled in the custom metadata.</inlineHelpText>
    <label>Is Special Condition Session</label>
    <type>Checkbox</type>
</CustomField>