force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Matching_Gift_Payments_Needing_Review__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Gift_Payments_Needing_Review__c</fullName>
    <description>List of matching gift payments needing review.</description>
    <inlineHelpText>List of matching gift payments needing review.</inlineHelpText>
    <label>Matching Gift Payments Needing Review</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>