force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__New_Transaction_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__New_Transaction_Formula__c</fullName>
    <formula>IF(  ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c  , &apos;Not Available (Session Closed)&apos;, HYPERLINK(&quot;/&quot; &amp;  $Setup.ucinn_ascendv2__Namespace__c.ucinn_ascendv2__Namespace_Value__c  &amp; &quot;/DONATION_PledgeMainApp.app?sessionId=&quot; + Id + &quot;&amp;viewType=pledge&quot;,IMAGE(&quot;/resource/&quot; &amp;  $Setup.ucinn_ascendv2__Namespace__c.ucinn_ascendv2__Namespace_Prefix__c  &amp;&quot;NewButton&quot;, &quot;New&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Transaction</label>
    <type>Text</type>
</CustomField>