force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Auto_Renewing_Mem_Pymt_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Auto_Renewing_Mem_Pymt_Posted__c</fullName>
    <description>No. of Auto Renewing Membership Payments Posted in this Session.</description>
    <inlineHelpText>No. of Auto Renewing Membership Payments Posted in this Session.</inlineHelpText>
    <label>No. of  Auto Renewing Mem Pymt Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>