force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Auto_Renewing_Membership_Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Auto_Renewing_Membership_Payment__c</fullName>
    <description>Number of Auto Renewing Membership Payment transactions expected in this Session.</description>
    <inlineHelpText>Number of Auto Renewing Membership Payment transactions expected in this Session.</inlineHelpText>
    <label>No. of  Auto Renewing Membership Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>