force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Gifts_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Gifts_Posted__c</fullName>
    <description>Number of Gifts Posted in this Session.</description>
    <inlineHelpText>Number of Gifts Posted in this Session.</inlineHelpText>
    <label>No. of Gifts Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>