force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Installment_Based_Mem_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Installment_Based_Mem_Posted__c</fullName>
    <description>Number of installment based membership posted.</description>
    <inlineHelpText>Number of installment based membership posted.</inlineHelpText>
    <label>No. of Installment Based Mem Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>