force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Installment_Mem_Pymt_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Installment_Mem_Pymt_Posted__c</fullName>
    <description>Number of Installment Based Membership Payments Posted in the Session.</description>
    <inlineHelpText>Number of Installment Based Membership Payments Posted in the Session.</inlineHelpText>
    <label>No. of Installment Mem Pymt Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>