force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Installment_Memberships__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Installment_Memberships__c</fullName>
    <description>Number of Installment Based Membership transactions expected in this Session.</description>
    <inlineHelpText>Number of Installment Based Membership transactions expected in this Session.</inlineHelpText>
    <label>No. of Installment Memberships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>