force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Matching_Gift_Payments_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Matching_Gift_Payments_Posted__c</fullName>
    <label>No. of Matching Gift Payments Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>