force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_One_Time_Memberships_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_One_Time_Memberships_Posted__c</fullName>
    <description>Number of One-Time Memberships Posted in the Session.</description>
    <inlineHelpText>Number of One-Time Memberships Posted in the Session.</inlineHelpText>
    <label>No. of One-Time Memberships Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>