force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Pledge_Payments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Pledge_Payments__c</fullName>
    <description>Number of Pledge Payment Transactions expected in this Session.</description>
    <inlineHelpText>Number of Pledge Payment Transactions expected in this Session.</inlineHelpText>
    <label>No. of Pledge Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>