force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Pledge_Payments_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Pledge_Payments_Posted__c</fullName>
    <description>Number of pledge payments posted in the Session.</description>
    <inlineHelpText>Number of pledge payments posted in the Session.</inlineHelpText>
    <label>No. of Pledge Payments Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>