force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Pledges__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Pledges__c</fullName>
    <description>Number of Pledge Transactions made in this session.</description>
    <inlineHelpText>Number of Pledge Transactions made in this session.</inlineHelpText>
    <label>No. of Pledges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>